--- a/env.example
+++ b/env.example
@@ -1,19 +1,99 @@
-# Пример переменных окружения для разработки
-NODE_ENV=development
+# SimplX Platform - Environment Variables Example
+# Copy this file to .env.local and configure your values
 
-# ===== АДМИНИСТРАТИВНАЯ БАЗА ДАННЫХ =====
-# Supabase проект simplx_crm_tenant для управления тенантами
+# ===== APPLICATION CONFIGURATION =====
+NODE_ENV=development
+PORT=4000
+HOST=0.0.0.0
+LOG_LEVEL=debug
+LOG_FORMAT=json
+
+# ===== ADMINISTRATIVE DATABASE =====
+# Supabase project for tenant management (simplx_crm_tenant)
 ADMIN_SUPABASE_URL=https://your-admin-project-id.supabase.co
 ADMIN_SUPABASE_SERVICE_KEY=your-admin-service-role-key
 
-# ===== FALLBACK КОНФИГУРАЦИЯ ТЕНАНТОВ =====
-# Используется если административная база недоступна
+# ===== TENANT CONFIGURATION =====
+# JSON configuration for tenant-specific Supabase projects
 TENANT_CONFIG={"jogzbtwfzlzroccnfjye":{"SUPABASE_URL":"https://jogzbtwfzlzroccnfjye.supabase.co","ANON_KEY":"your-anon-key","SERVICE_KEY":"your-service-role-key"}}
 
-# ===== ИНСТРУКЦИИ =====
-# 1. Скопируйте этот файл как .env.local
-# 2. Создайте проект simplx_crm_tenant в Supabase
-# 3. Выполните SQL скрипт из docs/tenant-management-schema.sql
-# 4. Замените your-admin-project-id на ID административного проекта
-# 5. Замените your-admin-service-role-key на service_role ключ административного проекта
-# 6. (Опционально) Настройте TENANT_CONFIG для fallback режима 
+# ===== CORS CONFIGURATION =====
+# JSON array of allowed origins
+CORS_ORIGINS=["http://localhost:3000", "http://localhost:5173", "http://localhost:3001"]
+
+# ===== FEATURE FLAGS =====
+ENABLE_METRICS=true
+ENABLE_HEALTH_CHECKS=true
+ENABLE_CACHING=true
+ENABLE_RATE_LIMITING=true
+ENABLE_CONSOLE_LOGGING=true
+
+# ===== PERFORMANCE SETTINGS =====
+REQUEST_TIMEOUT=30000
+MAX_CONNECTIONS=1000
+RATE_LIMIT_REQUESTS=100
+RATE_LIMIT_WINDOW=60000
+
+# ===== CONNECTOR CONFIGURATION =====
+DEFAULT_CONNECTOR=supabase
+SUPABASE_CONNECTOR_ENABLED=true
+SUPABASE_POOL_SIZE=10
+SUPABASE_TIMEOUT=30000
+SUPABASE_AUTO_REFRESH=false
+SUPABASE_PERSIST_SESSION=false
+
+# PostgreSQL Connector (optional)
+POSTGRESQL_CONNECTOR_ENABLED=false
+POSTGRESQL_POOL_SIZE=20
+POSTGRESQL_TIMEOUT=30000
+
+# ===== SERVICE CONFIGURATION =====
+# Tenant Management Service
+TENANT_SERVICE_ENABLED=true
+TENANT_SERVICE_TIMEOUT=30000
+TENANT_SERVICE_RETRIES=3
+
+# User Management Service
+USER_SERVICE_ENABLED=true
+USER_SERVICE_TIMEOUT=30000
+USER_SERVICE_RETRIES=3
+
+# Content Management Service
+CONTENT_SERVICE_ENABLED=true
+CONTENT_SERVICE_TIMEOUT=30000
+CONTENT_SERVICE_RETRIES=3
+
+# ===== API GATEWAY CONFIGURATION =====
+GATEWAY_PREFIX=/api
+GATEWAY_VERSION=v1
+GATEWAY_ENABLE_PROXY=true
+GATEWAY_ENABLE_LB=false
+
+# ===== HEALTH CHECK CONFIGURATION =====
+SUPABASE_HEALTH_CHECK=true
+SUPABASE_HEALTH_INTERVAL=30000
+POSTGRESQL_HEALTH_CHECK=true
+POSTGRESQL_HEALTH_INTERVAL=30000
+
+# ===== CIRCUIT BREAKER CONFIGURATION =====
+TENANT_SERVICE_CB_ENABLED=true
+TENANT_SERVICE_CB_THRESHOLD=5
+TENANT_SERVICE_CB_TIMEOUT=60000
+
+USER_SERVICE_CB_ENABLED=true
+USER_SERVICE_CB_THRESHOLD=5
+USER_SERVICE_CB_TIMEOUT=60000
+
+CONTENT_SERVICE_CB_ENABLED=true
+CONTENT_SERVICE_CB_THRESHOLD=5
+CONTENT_SERVICE_CB_TIMEOUT=60000
+
+# ===== SETUP INSTRUCTIONS =====
+# 1. Copy this file to .env.local
+# 2. Create administrative Supabase project (simplx_crm_tenant)
+# 3. Execute SQL schema from docs/tenant-management-schema.sql
+# 4. Replace your-admin-project-id with actual admin project ID
+# 5. Replace your-admin-service-role-key with actual service role key
+# 6. Configure TENANT_CONFIG with your tenant-specific Supabase projects
+# 7. Adjust performance and feature settings as needed
+# 8. Run: encore run 
