--- a/env.example
+++ b/env.example
@@ -14,8 +14,14 @@ ADMIN_SUPABASE_URL=https://your-admin-project-id.supabase.co
 ADMIN_SUPABASE_SERVICE_KEY=your-admin-service-role-key
 
 # ===== TENANT CONFIGURATION =====
-# JSON configuration for tenant-specific Supabase projects
-TENANT_CONFIG={"jogzbtwfzlzroccnfjye":{"SUPABASE_URL":"https://jogzbtwfzlzroccnfjye.supabase.co","ANON_KEY":"your-anon-key","SERVICE_KEY":"your-service-role-key"}}
+# ⚠️  TENANT_CONFIG is NOT set via environment variables!
+# Tenant configurations are loaded dynamically from the admin database:
+# - Database: simplx_crm_tenant (ADMIN_SUPABASE_URL)
+# - Table: tenant_supabase_configs
+# - Each tenant has separate Supabase project credentials stored in DB
+# 
+# TENANT_CONFIG={"tenant1":{"SUPABASE_URL":"...","ANON_KEY":"...","SERVICE_KEY":"..."}}
+# ↑ This is ONLY for fallback/testing purposes. Remove in production!
 
 # ===== CORS CONFIGURATION =====
 # JSON array of allowed origins
