--- a/Dockerfile.data-processing
+++ b/Dockerfile.data-processing
@@ -15,8 +15,11 @@ RUN pnpm install --frozen-lockfile
 # Copy source code
 COPY . .
 
+# Install Encore CLI
+RUN curl -L https://encore.dev/install.sh | bash
+
 # Expose service port
 EXPOSE 4003
 
 # Start the data processing service
-CMD ["npx", "encore", "run", "--port=4003"]
+CMD ["encore", "run", "--port=4003"]
