--- a/Dockerfile.user-management
+++ b/Dockerfile.user-management
@@ -15,8 +15,11 @@ RUN pnpm install --frozen-lockfile
 # Copy source code
 COPY . .
 
+# Install Encore CLI
+RUN curl -L https://encore.dev/install.sh | bash
+
 # Expose service port
 EXPOSE 4002
 
 # Start the user management service
-CMD ["npx", "encore", "run", "--port=4002"]
+CMD ["encore", "run", "--port=4002"]
