--- a/Dockerfile.data-processing
+++ b/Dockerfile.data-processing
@@ -1,5 +1,5 @@
 # Dockerfile for Data Processing Service
-FROM node:20-alpine
+FROM node:20
 
 WORKDIR /app
 
@@ -19,4 +19,4 @@ COPY . .
 EXPOSE 4003
 
 # Start the data processing service
-CMD ["npx", "encore", "run", "--port=4003"]
+CMD ["encore", "run", "--port=4003"]
