--- a/Dockerfile.event-management
+++ b/Dockerfile.event-management
@@ -1,5 +1,5 @@
 # Dockerfile for Event Management Service
-FROM node:20-alpine
+FROM node:20
 
 WORKDIR /app
 
@@ -19,4 +19,4 @@ COPY . .
 EXPOSE 4004
 
 # Start the event management service
-CMD ["npx", "encore", "run", "--port=4004"]
+CMD ["encore", "run", "--port=4004"]
