--- a/Dockerfile.user-management
+++ b/Dockerfile.user-management
@@ -1,10 +1,11 @@
 # Dockerfile for User Management Service
-FROM node:20
+FROM node:20-slim
 
 WORKDIR /app
 
-# Install pnpm
-RUN corepack enable && corepack prepare pnpm@latest --activate
+# Install curl and pnpm
+RUN apt-get update && apt-get install -y curl && \
+    corepack enable && corepack prepare pnpm@latest --activate
 
 # Copy package files
 COPY package.json pnpm-lock.yaml ./
@@ -17,6 +18,11 @@ COPY . .
 
 # Install Encore CLI
 RUN curl -L https://encore.dev/install.sh | bash
+RUN encore version update
+
+# Add Encore to PATH
+ENV ENCORE_INSTALL=/root/.encore
+ENV PATH=$ENCORE_INSTALL/bin:$PATH
 
 # Make the startup script executable
 RUN chmod +x /app/start-user-management.sh
